findbugs: Method invokes inefficient Number constructor
Change-Id: Id868d7fe02fde3af616cef32328a3a893582f4e9
Signed-off-by: Shahar Havivi <shavivi@redhat.com>